@@ -2,8 +2,8 @@
 
 if [ "$1" == "localization" ] 
 then
-	./agent test localization &
-	./agent trainer localization.phx
+	./agent test localization Phoenix & sleep 1
+	./agent trainer localization.phx 
 elif [ "$1" == "dribble" ]
 then
 	./agent test dribble &
